--- a/src/main/styles/updateID.scss
+++ b/src/main/styles/updateID.scss
@@ -1227,17 +1227,11 @@
     }
 
     .MuiDialogContent-root {
-        .selectRange {
-            display: flex;
-            margin-top: 32px;
-        }
-
+        
         .MuiAutocomplete-root {
-            width: 328px;
-        }
-
-        .MuiAutocomplete-root:nth-child(2) {
-            margin: 0 0 24px 24px;
+            margin-top: 32px;
+            margin-bottom: 32px;
+            width: 100%;
         }
 
         .region {
